--- a/index.html
+++ b/index.html
@@ -11,9 +11,46 @@
 </head>
 <body>
     <div class="=container">
+        <div class="weather-app">
         <h1>
-            Hello world
+            New York
         </h1>
+        <ul>
+            <li>
+                Friday  05:00
+            </li>
+            <li>
+                Clear
+            </li>
+        </ul>
+
+        <div class="row">
+            <div class="col-6">
+                <img src="https://ssl.gstatic.com/onebox/weather/64/sunny_s_cloudy.png" alt="Sunny">
+                12ºC | ºF
+            </div>
+            <div class="col-6">
+                <ul>
+                    <li>
+                        Precipitation : 0%
+                    </li>
+                    <li>
+                        Humidity : 73%
+                    </li>
+                    <li>
+                        Wind: 5km/h
+                    </li>
+                </ul>
+            </div>
+
+
+        </div>
+        </div>
+        <small>
+            <a href="https://github.com/lyndaZ/Vanilla-Weather-App"
+            target="_blank">Open-source code</a>
+            by Lynda Zondo.
+        </small>
 
     </div>
 
