--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="src/styles.css">
     <title>Weather App</title>
 </head>
 <body>
     <div class="=container">
+        <div class="weather-app-wrapper">
         <div class="weather-app">
+        <div class="overview">
         <h1>
             New York
         </h1>
@@ -23,11 +25,18 @@
                 Clear
             </li>
         </ul>
+        </div>
 
         <div class="row">
             <div class="col-6">
-                <img src="https://ssl.gstatic.com/onebox/weather/64/sunny_s_cloudy.png" alt="Sunny">
-                12ºC | ºF
+                <div class="d-flex weather-temperature">
+                    <img src="https://ssl.gstatic.com/onebox/weather/64/sunny_s_cloudy.png" alt="Clear" id="icon" class="float-left" />
+                    <div class="float-left">
+                    <strong id="temperature">12</strong> 
+                    <span class="units">°C | <a href="#">ºF</a></span> 
+                    </div>
+                </div>
+        
             </div>
             <div class="col-6">
                 <ul>
@@ -45,12 +54,13 @@
 
 
         </div>
+
         </div>
         <small>
-            <a href="https://github.com/lyndaZ/Vanilla-Weather-App"
-            target="_blank">Open-source code</a>
-            by Lynda Zondo.
+            <a href="https://github.com/lyndaZ/Vanilla-Weather-App" target="_blank">Open-source code</a>
+            by Lynda Zondo
         </small>
+        </div>
 
     </div>
 
