--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/styles.css">
     <title>Weather App</title>
 </head>
@@ -14,16 +15,12 @@
         <div class="weather-app-wrapper">
         <div class="weather-app">
         <div class="overview">
-        <h1>
-            New York
-        </h1>
+        <h1 id="city">New York</h1>
         <ul>
             <li>
                 Friday  05:00
             </li>
-            <li>
-                Clear
-            </li>
+            <li id="description">Clear</li>
         </ul>
         </div>
 
@@ -44,10 +41,10 @@
                         Precipitation : 0%
                     </li>
                     <li>
-                        Humidity : 73%
+                        Humidity : <span id="humidity">73</span> %
                     </li>
                     <li>
-                        Wind: 5km/h
+                       Wind: <span id="speed">5</span>km/h 
                     </li>
                 </ul>
             </div>
