--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
         <div class="overview">
         <h1 id="city">New York</h1>
         <ul>
-            <li>
-                Friday  05:00
-            </li>
+            <li> Last Updated <span id="date">Friday 05:00</span></li>
             <li id="description">Clear</li>
         </ul>
         </div>
