--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
         <div class="row">
             <div class="col-6">
                 <div class="d-flex weather-temperature">
-                    <img src="https://ssl.gstatic.com/onebox/weather/64/sunny_s_cloudy.png" alt="Clear" id="icon" class="float-left" />
+                    <img src="" 
+                    alt="Clear" 
+                    id="icon" 
+                    class="float-left"/>
                     <div class="float-left">
                     <strong id="temperature">12</strong> 
                     <span class="units">°C | <a href="#">ºF</a></span> 
