--- a/index.html
+++ b/index.html
@@ -14,7 +14,26 @@
     <div class="=container">
         <div class="weather-app-wrapper">
         <div class="weather-app">
+        <form id="search-form" class="md-3">
+            <div class="row">
+            <div class="col-9">
+                <input type="search" 
+                placeholder="Type in your city..."
+                class="form-control"
+                id="city-input"
+                autocomplete="off"/>
+                </div>
+                <div class="col-3">
+                <input 
+                type="submit" 
+                value="search" 
+                class= "btn btn-primary w-100">
+                </div>
+            </div>
+        </form>
+           
         <div class="overview">
+            
         <h1 id="city">New York</h1>
         <ul>
             <li> Last Updated <span id="date">Friday 05:00</span></li>
