--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="=container">
         <div class="weather-app-wrapper">
         <div class="weather-app">
-        <form id="search-form" class="md-3">
+        <form id="search-form" class="mb-3">
             <div class="row">
             <div class="col-9">
                 <input type="search" 
@@ -57,9 +57,6 @@
             </div>
             <div class="col-6">
                 <ul>
-                    <li>
-                        Precipitation : 0%
-                    </li>
                     <li>
                         Humidity : <span id="humidity">73</span> %
                     </li>
